# auto-zoom-controller

./: LICENSE  README.md  setup.cfg
src/auto-zoom-controller/: DRV8825.py  Logic.py  main.py
src/auto_zoom_controller/: AutoZoom.py  DRV8825.py  DRV8825_Helper.py  Logic.py  main.py
src/test/: test_Logic.py
