[metadata]
name = auto-zoom-controller
description = Use a stepper motor to zoom a lens during timelapse
long_description_content_type = text/markdown
url = https://github.com/szigyi/auto-zoom-controller
project_urls =
    Bug Tracker = https://github.com/szigyi/auto-zoom-controller/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    schedule >= 1.1.0

[options.packages.find]
where = src

;[options.entry_points]
;console_scripts =
;    auto-zoom-controller = auto-zoom-controller.main:main
